public/styles/nav.css
#nav-bar {
  height: 80px;
  left: 0;
  right: 0;
  top: 0;
  position: fixed;
  background-color: #00a087 ;
  color: #e8fdff;
  padding: 0em 2em;
}

#nav-bar .header {
  float: left;
  margin-left: 10px;
  font-size: 2em;
  line-height: 2.5em;
}

#nav-bar .logo {
  width: 80px;
  height: 80px;
  float: left;
}

#nav-bar .composeImg {
  width: 25px;
  height: 25px;
  float: left;
}

#nav-bar .compose  {
  float: right;
  border-radius: 10;
  border-radius: 10px;
  color: #ffffff;
  font-size: 20px;
  background: #00a087;
  margin-top: 0.5em;
  padding: 15px;
  border: solid #000000 1px;
}

#nav-bar .compose:hover  {
  background: #FF5F78;
  text-decoration: none;
}

